# savethat_cookiecutter

./: README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/workflows/: dev.yml
docs/: tutorial.md
hooks/: post_gen_project.py
tests/: test_bake_project.py  test_savethat_fit_ols.sh
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  makefile  pyproject.toml  savethat.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  preview.yml  release.yml
{{cookiecutter.project_slug}}/tests/: conftest.py  test_fit_ols.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __main__.py  fit_ols.py
