[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.1.1"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Xie Wei <ampedee@gmail.com>"]
readme = "README.md"
repository = "https://github.com/waynerv/cookiecutter-pypackage"
documentation = "https://waynerv.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mkdocs = "^1.3.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-include-markdown-plugin = "^3.4.0"
mkdocs-material = "^8.2.14"
mkdocstrings = "^0.18.1"
mypy = "^0.950"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cookies = "^0.6.1"
pytest-cov = "^3.0.0"
python-lsp-server = {extras = ["all"], version = "^1.4.1"}
pyyaml = "^5.3.1"
tox = "^3.20.1"
twine = "^4.0.0"
types-toml = "^0.10.7"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
